# MorseHub

./: .gitignore  .sconsign.dblite  AudioOutputDevice.cpp  AudioOutputDevice.h  CMakeLists.txt  CMakePresets.json  Callsign.h  HTTP.cpp  HTTP.h  LICENSE  MainWindow.h  MorseGenerator.cpp  MorseGenerator.h  MorseHub.cpp  MorseHub.h  MorseHub.sln  MorseHub.vcxproj  MorseHub.vcxproj.filters  MorseHubSettingsDialog.cpp  MorseHubSettingsDialog.h  Pack.h  README.md  RUFZCompetitionFrame.cpp  RUFZCompetitionFrame.h  RUFZStartDialog.cpp  RUFZStartDialog.h  ReceptionCompetitionFrame.cpp  ReceptionCompetitionFrame.h  ReceptionParser.cpp  ReceptionParser.h  ReceptionResultsDialog.cpp  ReceptionResultsDialog.h  ReceptionSettingsDialog.cpp  ReceptionSettingsDialog.h  ReceptionTypes.h  Result.h  RufzScoring.cpp  RufzScoring.h  RunnerAudioEffects.cpp  RunnerAudioEffects.h  (+41 more)
MorseHubPython/: generateEncryptionKey.py  main.py  mainWindow.py  morsePlayer.py  user.py
tests/: ReceptionParserTests.cpp  RufzScoringTests.cpp  RunnerAudioEffectsTests.cpp  RunnerSupportTests.cpp  SignalGeneratorTests.cpp  TrainerSupportTests.cpp
x64/Debug/: MorseHub.exe.recipe  MorseHub.res  vc143.idb
x64/Debug/MorseHub.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MorseHub.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog
